--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "mongoose": "^5.12.7",
